<resources>
<string name="app_name">InstaPay Receipt Register</string><string name="home">Home</string><string name="select_receipts">Select receipt images</string><string name="extract_data">Extract data</string><string name="verify_save">Verify &amp; save</string><string name="send_report">Send Excel + images</string><string name="open_data_folder">Open data folder</string><string name="settings">Settings</string><string name="contact_us">Contact Us</string><string name="approved_accounts">Approved accounts</string><string name="approved_notes">Approved Note numbers</string><string name="recipients">Report recipients</string><string name="review_title">Review OCR results</string><string name="empty_review">Select a receipt and extract its data to begin review.</string>
</resources>
