<menu xmlns:android="http://schemas.android.com/apk/res/android"><group android:checkableBehavior="single"><item android:id="@+id/nav_home" android:title="@string/home" android:icon="@android:drawable/ic_menu_view"/><item android:id="@+id/nav_settings" android:title="@string/settings" android:icon="@android:drawable/ic_menu_preferences"/><item android:id="@+id/nav_accounts" android:title="@string/approved_accounts" android:icon="@android:drawable/ic_menu_manage"/><item android:id="@+id/nav_notes" android:title="@string/approved_notes" android:icon="@android:drawable/ic_menu_edit"/><item android:id="@+id/nav_recipients" android:title="@string/recipients" android:icon="@android:drawable/ic_dialog_email"/><item android:id="@+id/nav_data_folder" android:title="@string/open_data_folder" android:icon="@android:drawable/ic_menu_save"/><item android:id="@+id/nav_contact" android:title="@string/contact_us" android:icon="@android:drawable/ic_menu_share"/></group></menu>
